sample: add gst_sample_set/get_buffer_list apis

Allowed to set/get buffer list to sample if needed

https://bugzilla.gnome.org/show_bug.cgi?id=751026